<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">偶遇</string>
    
    <!-- 配置信息 -->
    <string name="ip_option">设置IP</string>
    <string name="default_server_url">192.168.1.117</string>
    <string name="default_server_port">8080</string>
    <string name="default_server_project">bottle</string>
    
    <!-- 异常信息 -->
    <string name="unknownError">未知错误</string>
    
    <!-- 默认主菜单 -->
    <string name="out">确认退出该程序吗?</string>
    <string name="title">提示</string>
    <string name="commit">确定</string>
    <string name="not">取消</string>
    
    <!-- 模块信息 -->
	<!-- 登录模块 -->
    <string name="account_key">account_key</string>
    <string name="loginmain_title">偌大的城市，竟不知联系谁</string>
    <string name="loginmain_content">有个陌生人，愿倾听你的心事</string>
    <string name="loginmain_content_sub">新的内容，新的玩法，等待你来探索</string>
    <string name="login_name_title">账　号:</string>
    <string name="login_pwd_title">密　码:</string>
    <string name="login_inputAccHint">输入账号</string>
    <string name="login_inputPwdHint">输入密码</string>
    <string name="login">登录</string>
    <string name="opt_remember_account">记住账号</string>
    <string name="validate_title">登录验证</string>
    <string name="validate_msg">账号验证中,请稍候...</string>
    <string name="accountIsRequire">账号不能为空</string>
    <string name="passwordIsRequire">密码不能为空</string>
    <string name="loginFailure">登录失败</string>

    
    
    <!-- 注册模块 -->
    <string name="confirm_password">确认密码:</string>
    <string name="gender">性别：</string>
    <string name="gender_boy">男</string>
    <string name="gender_girl">女</string>
    <string name="city">城市：</string>
    
    <string name="home">首页</string>
    <string name="nearby">附近</string>
    <string name="square">广场</string>
    <string name="more">更多</string>
    <string name="user_info">头像</string>
    <string name="label_number">15\n标签</string>
    <string name="bottle_number">11\n瓶子</string>
    <string name="friend_number">49\n蜜友</string>
    <string name="cumulative_scoring">10\n积分</string>
    <string name="pinglun">评论</string>
    <string name="huifu">回复</string>
    <string name="pl_content_textview">风中做倒立:国企?!腐败分子的温床!(北京市14小时前)</string>
    <string name="home_bottle_tip">提示</string>
    <string name="home_bottle_tip_content">留言、评论别人的瓶子可以获得积分</string>
    <string name="home_bottle_content">欢迎来到漂流瓶世界！\n这里有新奇有趣，功能各异的瓶子，\n每个瓶子都有自己的故事，\n放下一个瓶子经历一段全新的旅行。</string>
    <string name="home_bottle_bottom">马上点击『发起瓶子』开始旅行</string>
    
    <string name="home_no_friend">您还没有好友</string>
    <string name="home_find_friend">点击『寻找好友』</string>
    <string name="home_friend_bottom">开始你与蜜友的第一次邂逅！</string>
    <string name="home_scoring_day_tip">今日总积分：</string>
    
    <string name="newbottle_tip">选择一个瓶子吧</string>
    <string name="newbottle_scoring">目前积分：</string>
    
    <string name="moreitem1">我赞的瓶子</string>
    <string name="moreitem2">我的评论</string>
    <string name="wdpl_2_title1">所有对您留言的评论都会显示在这里。</string>
    <string name="wdpl_2_title2">去『附近』寻找漂流瓶吧。</string>
    <string name="moreitem3">我的设置</string>
    <string-array name="qgzt">
        <item value="0">单身</item>
        <item value="1">已婚</item>
    </string-array>
    <string name="wdsz_ggtx">更改头像</string>
    <string name="wdsz_name">飞扬归来</string>
    <string name="wdsz_dqcs">当前城市:</string>
    <string name="wdsz_sr">你的生日:</string>
    <string name="wdsz_qgzt">情感状态:</string>
    <string name="wdsz_grqm">个人签名:</string>
    <string name="wdsz_zs">在此输入自述</string>
    <string name="wdsz_bcxg">保存修改</string>
    <string name="moreitem4">我的收藏</string>
    <string name="moreitem5">寻找好友</string>
    <string name="xzhy_2_title">输入对方的昵称</string>
    <string name="xzhy_edittext">请输入对方的昵称</string>
    <string name="xzhy_btntext">搜索</string>
    <string name="moreitem6">帮助</string>
    <string name="moreitem7">友情链接</string>

    <!-- ##################分页控件################## -->
    <string name="firstPage">首页</string>
    <string name="prevPage">上一页</string>
    <string name="nextPage">下一页</string>
    <string name="lastPage">末页</string>
    <string name="entries">条</string>
    <string name="all">共</string>
    <string name="page">页</string>
    <string name="order">第</string>
    <string name="dataLoadingTitle">数据加载</string>
    <string name="dataLoadingMsg">数据加载中,请稍候...</string>
    <string name="isFirstPage">已经是第一页</string>
    <string name="isLastPage">已经是最后一页</string>
</resources>
