<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/login_layout"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/loginmain_bg"
	android:layout_centerHorizontal="true">
		
		<TextView android:id="@+id/loginmain_title"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="20sp" android:textColor="#ffffff"
			android:paddingTop="50dip"
			android:layout_centerHorizontal="true"
			android:text="@string/loginmain_title"/>
		<TextView android:id="@+id/loginmain_content"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="16sp" android:paddingTop="5dip" android:textColor="#ffffff"
			android:layout_below="@id/loginmain_title"
			android:layout_centerHorizontal="true"
			android:text="@string/loginmain_content"/>
		<TextView android:id="@+id/loginmain_content_sub"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="12sp" android:paddingTop="5dip" android:textColor="#ffffff"
			android:layout_below="@id/loginmain_content"
			android:layout_centerHorizontal="true"
			android:text="@string/loginmain_content_sub"
			/>
		<ImageView android:id="@+id/loginmain_registerButton"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginTop="20dip"
			android:src="@drawable/registerbutton_selector"  
			android:layout_below="@id/loginmain_content_sub"
			android:layout_centerHorizontal="true"
			android:focusable="true" android:clickable="true" 
		/>
		<RelativeLayout 
		android:id="@+id/login_layout_email"
		android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_below="@id/loginmain_registerButton"
		android:layout_centerHorizontal="true">
		<TextView android:id="@+id/login_name_title"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginTop="45dip" android:textColor="#000000"
			android:text="@string/login_name_title"
			/>
		<EditText android:id="@+id/loginmain_email_edittext"
			android:layout_width="200dip"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:layout_alignBaseline="@id/login_name_title"
			android:layout_toRightOf="@id/login_name_title"
			android:hint="@string/login_inputAccHint"
			android:background="@drawable/edittext_selector"
			/>
		<TextView android:id="@+id/login_pwd_title"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textColor="#000000"
			android:layout_alignBaseline="@+id/loginmain_passowrd_edittext"
			android:layout_toLeftOf="@+id/loginmain_passowrd_edittext"
			android:text="@string/login_pwd_title"
			/>
		<EditText android:id="@+id/loginmain_passowrd_edittext"
			android:layout_width="200dip"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:singleLine="true"
			android:layout_below="@id/loginmain_email_edittext"
			android:layout_alignLeft="@id/loginmain_email_edittext"
			android:layout_marginTop="40dip"
			android:hint="@string/login_inputPwdHint"
			android:background="@drawable/edittext_selector"
			/>
		<CheckBox android:id="@+id/loginmain_saveuserinfo_checkbox"
			android:textColor="#000000"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@id/loginmain_passowrd_edittext"
			android:button="@drawable/checkbox_selector"
			android:clickable="true" android:focusable="true"
			android:text="@string/opt_remember_account"
		/>
		<ImageView android:id="@+id/loginmain_loginButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:focusable="true" android:clickable="true" 
			android:src="@drawable/loginbutton_selector" 
			android:layout_below="@id/loginmain_saveuserinfo_checkbox"
			android:layout_centerHorizontal="true"
		/>
		</RelativeLayout>
</RelativeLayout>
