<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_gravity="center_horizontal"
		 android:background="#f0f0f0"
		>
		<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="32px" android:background="@drawable/title_bg"
		android:focusable="true">
        <TextView android:id="@+id/app_weather_title"  
        android:layout_width="100px"  
        android:layout_height="fill_parent" 
        android:text="@string/app_name"
        android:padding="5px"/> 

		<com.douya.bottle.activity.component.AlwaysMarqueeTextView
		android:id="@+id/app_weather_content"
		android:layout_width="fill_parent"  
        android:layout_height="fill_parent" 
        android:textColor="#cccc00"
        android:padding="5px"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:scrollHorizontally="true"
		android:marqueeRepeatLimit="marquee_forever"
		android:ellipsize="marquee"
		android:background="@drawable/weather_bg"
        android:layout_alignBottom ="@id/app_weather_title"
        android:layout_toRightOf="@id/app_weather_title"
		/>
        </RelativeLayout> 
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dip"
		android:background="@drawable/select_bottle_top">
		<TextView android:id="@+id/newbottle_tip_tv"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="16sp" android:textColor="#6e6e6e"
			android:layout_centerInParent="true"
			android:text="@string/newbottle_tip"/>
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dip"
		android:background="#d5cebd">
	<TextView android:id="@+id/newbottle_scoring_tv"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textSize="12sp" android:textColor="#6e6e6e"
		android:layout_toLeftOf="@+id/home_scoring_day_tip_content_tv"
		android:layout_alignBottom="@+id/home_scoring_day_tip_content_tv"
		android:text="@string/newbottle_scoring"/>
	<TextView android:id="@+id/home_scoring_day_tip_content_tv"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textSize="12sp" android:textColor="#ff7200"
		android:paddingRight="10px"
		android:layout_alignParentRight="true"
		android:text="0"/>
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:background="#f0f0f0"
		android:padding="5dp">

	</RelativeLayout>
</LinearLayout>